# pae_platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  decisions_taken.md  docker-compose.yml  fly-backup.toml  fly-frontend.toml  fly.toml  refactor_phase.md
backend/: .dockerignore  CLAUDE.md  Dockerfile  alembic.ini  pyproject.toml  run_3a14_tests.py  run_3a17_tests.py  run_3a4_tests.py  run_3b101_tests.py  run_3b102_tests.py  run_3b151_tests.py  run_3b152_tests.py  run_3b159_tests.py  run_3b160_tests.py  run_3b163_tests.py  run_3b4_tests.py  run_3b5_tests.py  run_3b7_tests.py  run_3b85_tests.py  run_3b90_tests.py  run_3b91_tests.py  run_3b92_tests.py  run_3b93_tests.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_goal_contracts.py  0003_reflections.py  0004_skill_graph.py  0005_content_skill_link.py  0006_growth_snapshots.py  0007_user_preferences.py  0008_srs_cards.py  0009_submission_sharing.py  0010_conversation_memory.py  0011_socratic_level.py  0012_student_misconceptions.py  0013_confidence_reports.py  0014_student_notes.py  0015_career_tables.py  0015_submission_self_explanation.py  0016_daily_intentions.py  0016_saved_skill_path.py  0017_feedback_table.py  0017_reflection_kind.py  0018_goal_contract_weekly_hours.py  0019_weekly_intentions.py  0020_peer_review_assignments.py  0021_question_wall.py  0022_career_tables.py  0023_saved_skill_path.py  0024_feedback_table.py  0025_reconcile_runtime_state.py  0026_student_progress_unique.py  0027_agent_actions_actor_identity.py  0028_chat_conversations.py  (+30 more)
backend/app/: main.py
backend/course_content/: README.md
backend/scripts/: seed_admin_console.py  seed_catalog_tracks.sql  seed_e2e_courses.sql  seed_e2e_exercises.sql  seed_e2e_receipts.sql  seed_high_impact_exercises.sql
backend/tests/: conftest.py  test_chat_flashcards.py  test_notebook.py  test_notebook_summarize.py
(+1232 files in other folders)
