[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "anthropic>=0.91.0",
    "asyncpg>=0.31.0",
    "bcrypt<5.0",
    "celery>=5.6.3",
    "fastapi>=0.135.3",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.0",
    "langgraph>=1.1.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pinecone-client>=4.0.0",
    "pygithub>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.24",
    "razorpay>=1.4.2",
    "redis>=7.4.0",
    "sendgrid>=6.12.5",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.49",
    "stripe>=15.0.1",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.44.0",
    "weasyprint>=63.0",
    "pdfplumber>=0.11.4",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
    "types-redis>=4.6.0.20241004",
    "types-stripe>=3.5.2.20240106",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = false
no_implicit_optional = true
warn_unused_ignores = false
exclude = ["alembic/"]
